--- a/styles/master.css
+++ b/styles/master.css
@@ -30,4 +30,17 @@ h1 {
 
 a{
   color: white;
+  text-decoration: none;
+}
+
+.blank{
+  height: 200px;
+  width: 100px;
+
+}
+
+.circleicon{
+  height: 100px;
+  width: 100px;
+  border-radius: 100px;
 }
