--- a/styles/master.css
+++ b/styles/master.css
@@ -2,6 +2,7 @@
 body {
   background-color: #0B151E;
   color: gray;
+  font-family: 'Questrial', sans-serif;
 }
 
 h1 {
@@ -10,6 +11,9 @@ h1 {
   font-size: 40px;
   font-weight: bold;
 
+}
+h2 {
+  color: #F5F8F7;
 }
 
 .flex-container{
@@ -40,7 +44,38 @@ a{
 }
 
 .circleicon{
-  height: 32px;
-  width: 32px;
-  border-radius: 32px;
+  height: 256px;
+  width: 256px;
+  border-radius: 256px;
+  margin: auto;
+}
+
+div{
+  text-align: center;
+}
+
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  /* position: absolute; */
+  /* display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
+
+#content {
+  position: fixed;
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
